k8s/reporting-analytics/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting-analytics
spec:
  selector:
    matchLabels:
      app: reporting-analytics
  template:
    metadata:
      labels:
        app: reporting-analytics
    spec:
      containers:
        - name: reporting-analytics
          image: raanan7784/warehouse-reporting-analytics:v1.0.0
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
            requests:
              memory: '64Mi'
              cpu: '250m'
          ports:
            - containerPort: 8084
              name: web
