k8s/reporting-analytics/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reporting-analytics
spec:
  selector:
    app: reporting-analytics
  ports:
    - port: 8084
      name: web
