k8s/reporting-analytics/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reporting-analytics
  labels:
    name: reporting-analytics
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: '/reporting-analytics/'
            backend:
              service:
                name: reporting-analytics
                port:
                  number: 8084
